--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 BASEURL=http://3.142.144.214:3000/
 BASE_LIVE_URL=http://3.142.144.214:3000/
-API_URL=http://18.118.122.41/
-SITE_URL=http://18.118.122.41/
+API_URL=https://kindnessbackend.azurewebsites.net/
+SITE_URL=https://kindnessbackend.azurewebsites.net/
 # API_URL=https://nextupgrad.us/laravel-old/diligent-api/
 # SITE_URL=https://nextupgrad.us/laravel-old/diligent-api/
 NEXT_APP_ENV=developement
